--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
+# Nota: package-lock.json se debe commitar para Docker builds
+# package-lock.json
 yarn.lock
 
 # ============================
