--- a/admin-dseo/package.json
+++ b/admin-dseo/package.json
@@ -18,7 +18,8 @@
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "react-dropzone": "^15.0.0"
   },
   "devDependencies": {
     "@types/node": "^25.2.3",
