--- a/admin-dseo/package.json
+++ b/admin-dseo/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
+    "lucide-react": "^0.574.0",
     "next": "^16.1.6",
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
